File copy script

--- a/copy_script.ipynb
+++ b/copy_script.ipynb
@@ -40,18 +40,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # copy directories\n",
+    "# # copy files\n",
     "# from glob import glob\n",
     "# import shutil\n",
     "\n",
     "# user_names = [name.split('/')[-1] for name in glob('./*') if os.path.isdir(name)]\n",
     "# user_names = [name for name in user_names if name != 'lovit']\n",
     "\n",
-    "# file = ''\n",
+    "# files = ['']\n",
     "# for user_name in user_names:\n",
-    "#     command = 'cp ./lovit/{0} ./{1}/{2}'.format(file, user_name, file)\n",
-    "#     os.system(command)\n",
-    "#     print('copied %s' % (user_name))"
+    "#     for file in files:\n",
+    "#         if not file:\n",
+    "#             continue\n",
+    "#         command = 'cp ./lovit/{0} ./{1}/{2}'.format(file, user_name, file)\n",
+    "#         os.system(command)\n",
+    "#         print('copied %s' % (user_name))\n",
+    "#     print()"
    ]
   },
   {
