--- a/day05_topicmodeling/day5_0_LSI_using_SVD.ipynb
+++ b/day05_topicmodeling/day5_0_LSI_using_SVD.ipynb
@@ -11,18 +11,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
     "from lovit_textmining_dataset.navernews_10days import get_bow\n",
     "\n",
     "x, idx_to_vocab, vocab_to_idx = get_bow(date='2016-10-20', tokenize='noun')"
@@ -62,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.1 s, sys: 15.6 s, total: 30.7 s\n",
-      "Wall time: 15.8 s\n"
+      "CPU times: user 11.9 s, sys: 756 ms, total: 12.7 s\n",
+      "Wall time: 2.2 s\n"
      ]
     }
    ],
@@ -226,16 +216,16 @@
     {
      "data": {
       "text/plain": [
-       "[('신용재', 0.9619944661010452),\n",
-       " ('너무너무너무', 0.9500976581788422),\n",
-       " ('오블리스', 0.9497216288897583),\n",
-       " ('엠카운트다운', 0.9474410409197359),\n",
-       " ('빅브레인', 0.9457024049155245),\n",
-       " ('갓세븐', 0.9317425042665922),\n",
-       " ('세븐', 0.9259231907701305),\n",
-       " ('열창', 0.9004361633970785),\n",
-       " ('산들', 0.8918696823555596),\n",
-       " ('다비치', 0.8759927546317297)]"
+       "[('신용재', 0.9552878178846451),\n",
+       " ('너무너무너무', 0.9498185754778368),\n",
+       " ('오블리스', 0.9471846718165536),\n",
+       " ('엠카운트다운', 0.9453807172340739),\n",
+       " ('빅브레인', 0.9419469806405352),\n",
+       " ('세븐', 0.9316042807996416),\n",
+       " ('갓세븐', 0.921846519481754),\n",
+       " ('열창', 0.903097763498671),\n",
+       " ('산들', 0.8965402078025423),\n",
+       " ('다비치', 0.8908488841893291)]"
       ]
      },
      "execution_count": 8,
@@ -262,16 +252,16 @@
     {
      "data": {
       "text/plain": [
-       "[('버락', 0.9715665349517577),\n",
-       " ('백악관', 0.8985053705853924),\n",
-       " ('주지사', 0.8069562787276525),\n",
-       " ('꼭두각시', 0.7987454049867109),\n",
-       " ('공화당', 0.7858662170630752),\n",
-       " ('토론장', 0.7853423244082052),\n",
-       " ('월러스', 0.7821006130068013),\n",
-       " ('클린턴', 0.7794028240396036),\n",
-       " ('푸틴', 0.777821403814568),\n",
-       " ('도널드', 0.7769946965825345)]"
+       "[('버락', 0.9715178114845991),\n",
+       " ('백악관', 0.8827187091495476),\n",
+       " ('푸틴', 0.7847847184030823),\n",
+       " ('꼭두각시', 0.7840644491576816),\n",
+       " ('월러스', 0.7811827000936563),\n",
+       " ('공화당', 0.7809260038427459),\n",
+       " ('주지사', 0.7791825707452014),\n",
+       " ('클린턴', 0.7757087541462324),\n",
+       " ('토론장', 0.7726912398858452),\n",
+       " ('이민자', 0.7712913072640821)]"
       ]
      },
      "execution_count": 9,
@@ -291,16 +281,16 @@
     {
      "data": {
       "text/plain": [
-       "[('클린턴', 0.984377269174501),\n",
-       " ('승복', 0.9803727511690361),\n",
-       " ('선거조작', 0.9764612888080014),\n",
-       " ('힐러리', 0.9666305685981885),\n",
-       " ('공화당', 0.9661388089142507),\n",
-       " ('토론', 0.965848817571503),\n",
-       " ('유권자들', 0.963856080623539),\n",
-       " ('도널드', 0.9624615703856234),\n",
-       " ('지저분', 0.9614910167532831),\n",
-       " ('음담패설', 0.9588379161789311)]"
+       "[('클린턴', 0.9854195580508904),\n",
+       " ('승복', 0.9773189078817663),\n",
+       " ('선거조작', 0.9769863047621602),\n",
+       " ('토론', 0.9697297647665053),\n",
+       " ('공화당', 0.9671034668408491),\n",
+       " ('힐러리', 0.9643333294562297),\n",
+       " ('유권자들', 0.9639892723664045),\n",
+       " ('지저분', 0.9624294936189208),\n",
+       " ('도널드', 0.9587426561258291),\n",
+       " ('음담패설', 0.9554869646250086)]"
       ]
      },
      "execution_count": 10,
@@ -416,14 +406,14 @@
      "text": [
       "doc#=9615 : [('오바마', 11), ('트럼프', 11), ('대통령', 10), ('미국', 5), ('초대', 4), ('토론', 4), ('대변', 3), ('지지', 3), ('케냐', 3), ('힐러리', 3)]\n",
       "doc#=9471 : [('오바마', 13), ('대통령', 12), ('트럼프', 11), ('미국', 6), ('초대', 4), ('대변', 3), ('지지', 3), ('케냐', 3), ('토론', 3), ('부인', 2)]\n",
-      "doc#=14951 : [('트럼프', 10), ('대통령', 7), ('클린턴', 7), ('후보', 7), ('공화당', 4), ('결과', 3), ('꼭두각시', 3), ('대선', 3), ('비방', 3), ('기자', 2)]\n",
       "doc#=7256 : [('트럼프', 25), ('힐러리', 17), ('대통령', 7), ('토론', 7), ('푸틴', 6), ('미국', 5), ('여자', 5), ('끔찍', 4), ('러시아', 4), ('꼭두각시', 3)]\n",
+      "doc#=14951 : [('트럼프', 10), ('대통령', 7), ('클린턴', 7), ('후보', 7), ('공화당', 4), ('결과', 3), ('꼭두각시', 3), ('대선', 3), ('비방', 3), ('기자', 2)]\n",
       "doc#=11929 : [('대통령', 7), ('오바마', 7), ('트럼프', 7), ('선거', 6), ('주장', 6), ('조작', 5), ('대선', 4), ('이라고', 4), ('클린턴', 4), ('후보', 4)]\n",
-      "doc#=11441 : [('공화당', 20), ('대통령', 7), ('로비', 6), ('선거', 6), ('후보', 6), ('것이다', 5), ('미국', 5), ('조직', 4), ('트럼프', 4), ('권력', 3)]\n",
-      "doc#=14219 : [('트럼프', 6), ('오바마', 4), ('토론', 4), ('대통령', 3), ('초청', 3), ('힐러리', 3), ('3차', 2), ('공화당', 2), ('민주당', 2), ('불편', 2)]\n",
-      "doc#=30018 : [('토론', 12), ('트럼프', 9), ('후보', 7), ('클린턴', 6), ('3차', 5), ('대선', 4), ('대통령', 4), ('미국', 4), ('오바마', 4), ('토론장', 4)]\n",
       "doc#=27797 : [('트럼프', 31), ('클린턴', 20), ('대통령', 12), ('미국', 9), ('토론', 9), ('꼭두각시', 6), ('여성', 6), ('후보', 6), ('19일', 5), ('뉴스1', 5)]\n",
-      "doc#=15196 : [('트럼프', 8), ('대선', 5), ('클린턴', 5), ('미국', 4), ('토론', 4), ('승자', 3), ('응답자', 3), ('겨냥', 2), ('결과', 2), ('공격', 2)]\n"
+      "doc#=11441 : [('공화당', 20), ('대통령', 7), ('로비', 6), ('선거', 6), ('후보', 6), ('것이다', 5), ('미국', 5), ('조직', 4), ('트럼프', 4), ('권력', 3)]\n",
+      "doc#=30018 : [('토론', 12), ('트럼프', 9), ('후보', 7), ('클린턴', 6), ('3차', 5), ('대선', 4), ('대통령', 4), ('미국', 4), ('오바마', 4), ('토론장', 4)]\n",
+      "doc#=7081 : [('트럼프', 29), ('힐러리', 21), ('대통령', 6), ('이라고', 6), ('토론', 6), ('러시아', 5), ('푸틴', 5), ('면서', 4), ('미국', 4), ('여성', 4)]\n",
+      "doc#=8815 : [('트럼프', 8), ('클린턴', 7), ('토론', 5), ('대통령', 4), ('3차', 3), ('대선', 3), ('면서', 3), ('미국', 3), ('푸틴', 3), ('2조', 2)]\n"
      ]
     }
    ],
@@ -446,13 +436,13 @@
      "text": [
       "doc#=16490 : [('아이오아이', 7), ('엠카운트다운', 4), ('무대', 3), ('너무너무너무', 2), ('선보', 2), ('스포츠조선', 2), ('완전체', 2), ('잠깐', 2), ('활동', 2), ('20일', 1)]\n",
       "doc#=9228 : [('아이오아이', 6), ('무대', 4), ('엠카운트다운', 4), ('너무너무너무', 2), ('발랄', 2), ('완전체', 2), ('이날', 2), ('20일', 1), ('갓세븐', 1), ('금지', 1)]\n",
-      "doc#=9894 : [('아이오아이', 5), ('너무너무너무', 4), ('엠카운트다운', 3), ('출연', 3), ('걸그룹', 2), ('무대', 2), ('박진영', 2), ('발랄', 2), ('이날', 2), ('잠깐', 2)]\n",
       "doc#=16489 : [('선보', 5), ('아이오아이', 3), ('엠카운트다운', 3), ('무대', 2), ('스포츠조선', 2), ('이날', 2), ('20일', 1), ('갓세븐', 1), ('검은색', 1), ('금지', 1)]\n",
       "doc#=21249 : [('무대', 5), ('너무너무너무', 3), ('아이오아이', 3), ('컴백', 3), ('잠깐', 2), ('진영', 2), ('100', 1), ('20일', 1), ('가창력', 1), ('개개인', 1)]\n",
+      "doc#=9894 : [('아이오아이', 5), ('너무너무너무', 4), ('엠카운트다운', 3), ('출연', 3), ('걸그룹', 2), ('무대', 2), ('박진영', 2), ('발랄', 2), ('이날', 2), ('잠깐', 2)]\n",
       "doc#=21674 : [('방탄소년단', 11), ('무대', 9), ('1위', 7), ('다비치', 6), ('방송', 4), ('엠카운트다운', 4), ('올랐다', 4), ('감사', 3), ('샤이니', 3), ('10위', 2)]\n",
-      "doc#=8011 : [('무대', 5), ('신용재', 5), ('아이오아이', 5), ('엠카운트다운', 5), ('선보', 4), ('공개', 3), ('컴백', 3), ('너무너무너무', 2), ('모습', 2), ('방송', 2)]\n",
       "doc#=26397 : [('1위', 4), ('무대', 4), ('아이오아이', 4), ('눈물', 3), ('방송', 3), ('방탄소년단', 3), ('보컬', 3), ('신용재', 3), ('24', 2), ('기자', 2)]\n",
       "doc#=25181 : [('아이오아이', 4), ('너무너무너무', 3), ('매력', 3), ('무대', 3), ('잠깐', 2), ('중독성', 2), ('20일', 1), ('감성적', 1), ('개개인', 1), ('개성', 1)]\n",
+      "doc#=18240 : [('1위', 3), ('방탄소년단', 3), ('다비치', 2), ('무대', 2), ('방송', 2), ('엠카운트다운', 2), ('100', 1), ('20일', 1), ('감사', 1), ('갓세븐', 1)]\n",
       "doc#=26364 : [('무대', 5), ('24', 3), ('선보', 3), ('신용재', 3), ('아이오아이', 3), ('기자', 2), ('너무너무너무', 2), ('보컬', 2), ('엠카운트다운', 2), ('잠깐', 2)]\n"
      ]
     }
@@ -469,15 +459,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": []
   }
