--- a/day06_graph_ranking/day6_1_pagerank_and_textrank.ipynb
+++ b/day06_graph_ranking/day6_1_pagerank_and_textrank.ipynb
@@ -13,14 +13,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "['성씨/NNP',\n",
@@ -48,8 +40,7 @@
     }
    ],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
     "\n",
     "path = get_news_paths(date='2016-10-20', tokenize='komoran')\n",
@@ -331,13 +322,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter 1 : diff = 0.8461472508410279 (0.002 sec)\n",
-      "iter 2 : diff = 0.0777242695496277 (0.002 sec)\n",
-      "iter 3 : diff = 0.007689184017572718 (0.001 sec)\n",
-      "iter 4 : diff = 0.0018597117256751708 (0.001 sec)\n",
-      "iter 5 : diff = 0.0007008521153693605 (0.001 sec)\n",
-      "iter 6 : diff = 0.00028895253132882245 (0.001 sec)\n",
-      "iter 7 : diff = 0.0001208755391157564 (0.001 sec)\n",
+      "iter 1 : diff = 0.8461472508410279 (0.003 sec)\n",
+      "iter 2 : diff = 0.0777242695496277 (0.003 sec)\n",
+      "iter 3 : diff = 0.007689184017572718 (0.003 sec)\n",
+      "iter 4 : diff = 0.0018597117256751708 (0.003 sec)\n",
+      "iter 5 : diff = 0.0007008521153693605 (0.003 sec)\n",
+      "iter 6 : diff = 0.00028895253132882245 (0.003 sec)\n",
+      "iter 7 : diff = 0.0001208755391157564 (0.003 sec)\n",
       "Early stop. because it already converged.\n"
      ]
     }
