--- a/day06_graph_ranking/day6_3_textrank_lovit.ipynb
+++ b/day06_graph_ranking/day6_3_textrank_lovit.ipynb
@@ -16,15 +16,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n",
       "10000\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
     "\n",
     "path = get_news_paths(date='2016-10-20', tokenize='komoran')\n",
