--- a/day06_graph_ranking/day6_4_gensim_textrank.ipynb
+++ b/day06_graph_ranking/day6_4_gensim_textrank.ipynb
@@ -65,19 +65,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
     "\n",
     "path = get_news_paths(date='2016-10-20')\n",
