--- a/day06_graph_ranking/day6_5_simrank_and_rwr.ipynb
+++ b/day06_graph_ranking/day6_5_simrank_and_rwr.ipynb
@@ -13,21 +13,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
     "import soygraph\n",
     "from soygraph import bow_to_graph\n",
-    "from navernews_10days import get_bow\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow\n",
     "\n",
     "x0, idx_to_vocab, vocab_to_idx = get_bow(date='2016-10-20', tokenize='noun')\n",
     "x = bow_to_graph(x0)"
@@ -127,8 +117,8 @@
       "방탄소년단\n",
       "형은\n",
       "파워풀\n",
-      "CPU times: user 56 ms, sys: 0 ns, total: 56 ms\n",
-      "Wall time: 56.4 ms\n"
+      "CPU times: user 64 ms, sys: 4 ms, total: 68 ms\n",
+      "Wall time: 65.7 ms\n"
      ]
     }
    ],
@@ -254,8 +244,8 @@
       "불독\n",
       "키미\n",
       "음악방송\n",
-      "CPU times: user 14.5 s, sys: 0 ns, total: 14.5 s\n",
-      "Wall time: 14.5 s\n"
+      "CPU times: user 15.3 s, sys: 4 ms, total: 15.3 s\n",
+      "Wall time: 15.3 s\n"
      ]
     }
    ],
