Check day6 scraping

--- a/day06_scraping/day6_news.ipynb
+++ b/day06_scraping/day6_news.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "url = 'https://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=102&oid=422&aid=0000370702'\n",
@@ -96,11 +98,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"동영상 뉴스 // flash 오류를 우회하기 위한 함수 추가 function _flash_removeCallback() {} 강남경찰서 또 비위…피의자에게 금품수수 '입건'\",\n",
+       " '[앵커]',\n",
+       " '서울 강남경찰서 소속의 한 경찰관이 피의자에게 금품과 접대를 받은 사실이 드러났습니다.',\n",
+       " '버닝썬 사태와 관련해 강남경찰서 소속 전·현직 경찰관의 유착정황이 드러난 데 이어 또 비슷한 일이 발생한 겁니다.',\n",
+       " '조한대 기자입니다.',\n",
+       " '[기자]',\n",
+       " '경찰이 서울 강남경찰서 경제팀 소속 A경위를 금품수수 혐의로 입건했습니다.',\n",
+       " '금품을 준 인물은 A경위가 2017년에 맡았던 사기 사건의 여성 피의자.',\n",
+       " \"당시 이 사건은 '혐의 없음' 의견으로 검찰에 넘겨졌습니다.\",\n",
+       " '경찰은 사건 송치 후 두 사람이 친분을 쌓은 사실을 확인했습니다.',\n",
+       " '서울경찰청 지능범죄수사대는 \"현재 골프접대 1회, 금품 수백만원을 받은 것을 확인했다\"며 \"16일 A경위의 주거지와 사무실 등을 압수수색했다\"고 밝혔습니다.',\n",
+       " '강남경찰서를 거친 경찰관의 비위 정황은 이뿐만이 아닙니다.',\n",
+       " '앞서 전 강남경찰서 과장인 석모 경정은 클럽 버닝썬과 경찰 간 유착 고리로 지목된 전직 경찰 강모씨에게 수입 중고차를 싸게 사들여 입건됐습니다.',\n",
+       " \"승리 등이 있던 대화방에서 '경찰총장'으로 거론된 윤모 총경은 강남경찰서에서 생활안전과장을 지냈습니다.\",\n",
+       " \"윤 총경은 술집 '몽키뮤지엄'이 식품위생법 위반으로 고발 됐을때, 강남경찰서 팀장급 직원 등에게 전화해 수사 상황을 알아본 것으로 알려졌습니다.\",\n",
+       " '클럽과의 유착 의혹으로 얽힌 강남경찰서.',\n",
+       " \"소속 직원의 비위 정황이 끊임없이 드러나면서 '비리 경찰서'라는 오명을 쓰게될 위기에 처했습니다.\",\n",
+       " '연합뉴스TV 조한대입니다.',\n",
+       " 'onepunch@yna.co.kr',\n",
+       " '연합뉴스TV 기사문의 및 제보 : 카톡/라인 jebo23',\n",
+       " '▶ 연합뉴스TV 네이버 채널 구독 ▶ 생방송 시청',\n",
+       " '▶ 대한민국 뉴스의 시작, 연합뉴스TV 앱 다운받기']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# parse_content(soup).split('  ')"
+    "parse_content(soup).split('  ')"
    ]
   },
   {
@@ -112,8 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scrap_news(url):\n",
@@ -138,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +215,7 @@
        "'%EB%B2%84%EB%8B%9D%EC%8D%AC'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +242,7 @@
        "'https://search.naver.com/search.naver?where=news&query=%EB%B2%84%EB%8B%9D%EC%8D%AC&sm=tab_opt&sort=0&photo=0&field=0&reporter_article=&pd=3&ds=2019.04.18&de=2019.04.19'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "660"
+       "617"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,10 +360,10 @@
     {
      "data": {
       "text/plain": [
-       "39"
+       "44"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,8 +396,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -383,8 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -403,8 +443,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_response(request_url, referer_url):\n",
@@ -418,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -427,13 +469,22 @@
        "dict_keys(['success', 'code', 'message', 'lang', 'country', 'result', 'date'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "comments.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# comments['result']['commentList'][0]['contents']"
    ]
   },
   {
