--- a/day06_scraping/day6_scrap_navermovie.ipynb
+++ b/day06_scraping/day6_scrap_navermovie.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "requests 패키지는 url 주소의 정보를 가져옵니다. 여기에는 headers 나 cookies 와 같은 정보도 포함되어 있습니다. 우리가 웹 브라우저로 보는 HTML 코드는 text 에 저장되어 있습니다.\n",
     "\n",
-    "HTML 은 XML 로 구조화된 텍스트입니다. 그렇기 때문에 XML parser 를 이용하면 문서의 각 부분을 손쉽게 접근할 수 있습니다. BeautifulSoup 은 이를 도와주는 패키지 입니다. 현재 최신 버전은 4.7.1 이며, 4.6.x 에서 4.7.x 로 넘어오면서 바뀐 문법이 있습니다. 반드시 버전을 확인하시기 바랍니다. 이전 버전일 경우에 pip 을 이용하여 업그레이드 할 수 있습니다.\n",
+    "HTML 은 XML 로 구조화된 텍스트입니다. 그렇기 때문에 XML parser 를 이용하면 문서의 각 부분을 손쉽게 접근할 수 있습니다. BeautifulSoup 은 이를 도와주는 패키지 입니다. 현재 최신 버전은 4.8.1 이며, 4.6.x 에서 4.7.x 로 넘어오면서 바뀐 문법이 있습니다. 반드시 버전을 확인하시기 바랍니다. 이전 버전일 경우에 pip 을 이용하여 업그레이드 할 수 있습니다.\n",
     "\n",
     "```\n",
     "pip install --upgrade beautifulsoup4\n",
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.7.1\n"
+      "4.8.1\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Pragma': 'no-cache', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'Cache-Control': 'no-cache, no-store', 'Content-Language': 'ko-KR', 'P3P': 'CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\", CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\"', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Type': 'text/html;charset=UTF-8', 'Content-Length': '29292', 'Accept-Ranges': 'bytes', 'Date': 'Thu, 18 Apr 2019 10:21:00 GMT', 'X-Varnish': '2355606663 2355605989', 'Age': '12', 'Via': '1.1 varnish', 'X-Varnish-Cache': 'HIT', 'Referrer-Policy': 'unsafe-url', 'Server': 'nfront'}\n",
+      "{'Pragma': 'no-cache', 'Expires': 'Thu, 01 Jan 1970 00:00:00 GMT', 'Cache-Control': 'no-cache, no-store', 'Content-Language': 'ko-KR', 'P3P': 'CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\", CP=\"ALL CURa ADMa DEVa TAIa OUR BUS IND PHY ONL UNI PUR FIN COM NAV INT DEM CNT STA POL HEA PRE LOC OTC\"', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Type': 'text/html;charset=UTF-8', 'Content-Length': '30217', 'Accept-Ranges': 'bytes', 'Date': 'Fri, 17 Jan 2020 20:36:57 GMT', 'X-Varnish': '1147081373', 'Age': '0', 'Via': '1.1 varnish', 'X-Varnish-Cache': 'MISS', 'Referrer-Policy': 'unsafe-url', 'Server': 'nfront'}\n",
       "\n",
       "<RequestsCookieJar[]>\n"
      ]
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "12"
       ]
      },
      "execution_count": 8,
@@ -308,7 +308,8 @@
       "{'name': '칼리 헤르난데스', 'role': '트레이시 역'}\n",
       "{'name': '톰 에버렛 스콧', 'role': '데이비드 역'}\n",
       "{'name': '핀 위트록', 'role': '그렉 역'}\n",
-      "{'name': '제이슨 푸치스', 'role': '카를로 역'}\n"
+      "{'name': '제이슨 푸치스', 'role': '카를로 역'}\n",
+      "{'name': '올리비아 해밀턴', 'role': '브리 역'}\n"
      ]
     }
    ],
@@ -356,7 +357,8 @@
       "{'name': '칼리 헤르난데스', 'role': '트레이시 역', 'order': 8}\n",
       "{'name': '톰 에버렛 스콧', 'role': '데이비드 역', 'order': 9}\n",
       "{'name': '핀 위트록', 'role': '그렉 역', 'order': 10}\n",
-      "{'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}\n"
+      "{'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}\n",
+      "{'name': '올리비아 해밀턴', 'role': '브리 역', 'order': 12}\n"
      ]
     }
    ],
@@ -393,7 +395,8 @@
        " {'name': '칼리 헤르난데스', 'role': '트레이시 역', 'order': 8},\n",
        " {'name': '톰 에버렛 스콧', 'role': '데이비드 역', 'order': 9},\n",
        " {'name': '핀 위트록', 'role': '그렉 역', 'order': 10},\n",
-       " {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}]"
+       " {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11},\n",
+       " {'name': '올리비아 해밀턴', 'role': '브리 역', 'order': 12}]"
       ]
      },
      "execution_count": 12,
@@ -444,7 +447,8 @@
        "  {'name': '칼리 헤르난데스', 'role': '트레이시 역', 'order': 8},\n",
        "  {'name': '톰 에버렛 스콧', 'role': '데이비드 역', 'order': 9},\n",
        "  {'name': '핀 위트록', 'role': '그렉 역', 'order': 10},\n",
-       "  {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11}]}"
+       "  {'name': '제이슨 푸치스', 'role': '카를로 역', 'order': 11},\n",
+       "  {'name': '올리비아 해밀턴', 'role': '브리 역', 'order': 12}]}"
       ]
      },
      "execution_count": 13,
@@ -756,15 +760,15 @@
        "  'text': '이 영화의 백미는 마지막 부분에 남녀 주인공들의 IF 장면들... 이렇게 되지 못한 결말을 맞지만 그래도 서로의 꿈을 이루고 인정하는 듯한 둘만의 미소,,,, 뭔가 가슴 찡했다...'},\n",
        " {'score': 10,\n",
        "  'text': '위플래시가 음악에 대한 광기라면 이 영화는 열정이다. 같은날 개봉되는 삼류 국산영화는 범접조차 할수 없다'},\n",
-       " {'score': 7, 'text': '관람객슬프기 짝이 없는 상상.'},\n",
+       " {'score': 7, 'text': '관람객 슬프기 짝이 없는 상상.'},\n",
        " {'score': 9,\n",
-       "  'text': '관람객아이러니컬하게도, 꿈이라는 건 이루고 난 뒤보다 이루기 전까지가 실은 가장 행복했다는 걸, 이루고 난 뒤에야 깨닫는다는 인생의 진실을 가슴 아프게 그리고 아름답게 보여주는 영화'},\n",
+       "  'text': '관람객 아이러니컬하게도, 꿈이라는 건 이루고 난 뒤보다 이루기 전까지가 실은 가장 행복했다는 걸, 이루고 난 뒤에야 깨닫는다는 인생의 진실을 가슴 아프게 그리고 아름답게 보여주는 영화'},\n",
+       " {'score': 10, 'text': '관람객 서로의 꿈을 돌보아주고 키워가며 각자의 길을 응원하는 최고의 뮤지컬.'},\n",
+       " {'score': 8, 'text': '관람객 다시 돌아간다면 지금과 달랐을까?'},\n",
+       " {'score': 10, 'text': '관람객 왤케눈물이나오는지..ㅠㅠ'},\n",
        " {'score': 10,\n",
-       "  'text': '다미엔 차젤레 감독은 관객에게 황홀한 마법을 걸었다. 재즈에 대한 애정을 담아 연출했고 꿈 꾸는 모든 이들을 위한 영화. 롱테이크 오프닝 시퀀스, OST부터 이미 매료되었고 엔딩까지 한 편의 동화 같은 현실 이야기. 라이언 고슬링 눈빛이 여운을 남긴다'},\n",
-       " {'score': 10, 'text': '관람객서로의 꿈을 돌보아주고 키워가며 각자의 길을 응원하는 최고의 뮤지컬.'},\n",
-       " {'score': 10, 'text': '관람객왤케눈물이나오는지..ㅠㅠ'},\n",
-       " {'score': 8, 'text': '관람객다시 돌아간다면 지금과 달랐을까?'},\n",
-       " {'score': 10, 'text': '관람객영화 시작부터 깜짝놀랐다. 지금까지 본 음악영화 중에서 최고다.'},\n",
+       "  'text': '다미엔 차젤레 감독은 관객에게 황홀한 마법을 걸었다. 재즈에 대한 애정을 담아 연출했고 꿈 꾸는 모든 이들을 위한 영화. 롱테이크 오프닝 시퀀스, OST부터 이미 매료되었고 엔딩까지 한 편의 동화 같은 현실 이야기....'},\n",
+       " {'score': 10, 'text': '관람객 영화 시작부터 깜짝놀랐다. 지금까지 본 음악영화 중에서 최고다.'},\n",
        " {'score': 10,\n",
        "  'text': '시간이 지나도 우리가 함께 꿈꾸었다는 사실은 변하지 않을 것이다. 그것이 비록 서로 다른 꿈이었을지라도...'}]"
       ]
@@ -889,23 +893,6 @@
    "source": [
     "headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36'}\n",
     "soup = get_soup(url, headers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "네이버 영화의 메타 데이터 및 댓글을 수집하는 스크래핑 코드는 아래의 repository 에 공개하였습니다.\n",
-    "\n",
-    "- [https://github.com/lovit/naver_movie_scraper](https://github.com/lovit/naver_movie_scraper)\n",
-    "\n",
-    "네이버 뉴스 기사를 검색하여, 해당 기사의 본문과 댓글을 수집하는 스크래핑 코드도 아래의 repository 에 공개하였습니다.\n",
-    "\n",
-    "- [https://github.com/lovit/naver_news_search_scraper](https://github.com/lovit/naver_news_search_scraper)\n",
-    "\n",
-    "IMDB scraper 도 아래의 repository 에 공개하였습니다.\n",
-    "\n",
-    "- [https://github.com/lovit/imdb_scraper](https://github.com/lovit/imdb_scraper)"
    ]
   },
   {
