Update TextRank + subword tokenizer

--- a/day06_graph_ranking/day6_3_textrank_lovit.ipynb
+++ b/day06_graph_ranking/day6_3_textrank_lovit.ipynb
@@ -209,10 +209,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오패산터널 총격전 용의자 검거 서울 연합뉴스 경찰 관계자들이 19일 오후 서울 강북구 오패산 터널 인근에서 사제 총기를 발사해 경찰을 살해한 용의자 성모씨를 검거하고 있다 성씨는 검거 당시 서바이벌 게임에서 쓰는 방탄조끼에 헬멧까지 착용한 상태였다\n",
+      "\n",
+      "총격현장 수색하는 경찰들 서울 연합뉴스 이효석 기자 19일 오후 서울 강북구 오패산 터널 인근에서 경찰들이 폭행 용의자가 사제총기를 발사해 경찰관이 사망한 사건을 조사 하고 있다\n",
+      "\n",
+      "용의자 소지 사제총기 2정 서울 연합뉴스 임헌정 기자 서울 시내에서 폭행 용의자가 현장 조사를 벌이던 경찰관에게 사제총기를 발사해 경찰관이 숨졌다 19일 오후 6시28분 강북구 번동에서 둔기로 맞았다 는 폭행 피해 신고가 접수돼 현장에서 조사하던 강북경찰서 번동파출소 소속 김모 54 경위가 폭행 용의자 성모 45 씨가 쏜 사제총기에 맞고 쓰러진 뒤 병원에 옮겨졌으나 숨졌다 사진은 용의자가 소지한 사제총기\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def subword_tokenizer(sent):\n",
+    "    words = [w[:3] for w in sent.split() if len(w) > 1]\n",
+    "    return words\n",
+    "\n",
+    "summarizer = KeysentenceSummarizer(\n",
+    "    tokenize = subword_tokenizer,\n",
+    "    min_sim = 0.3,\n",
+    "    verbose = False\n",
+    ")\n",
+    "\n",
+    "keysents = summarizer.summarize(sents, topk=3)\n",
+    "for order, rank, sent in keysents:\n",
+    "    print(sent, end='\\n\\n')"
+   ]
   },
   {
    "cell_type": "code",
