--- a/day07_sequential_labeling_ner/day7_a_feedforward_window_classification_ner.ipynb
+++ b/day07_sequential_labeling_ner/day7_a_feedforward_window_classification_ner.ipynb
@@ -20,28 +20,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n",
       "[Noun Extractor] use default predictors\n",
       "[Noun Extractor] num features: pos=3929, neg=2321, common=107\n",
       "[Noun Extractor] counting eojeols\n",
-      "[EojeolCounter] n eojeol = 403896 from 223357 sents. mem=0.226 Gb                    \n",
+      "[EojeolCounter] n eojeol = 403896 from 223357 sents. mem=0.222 Gb                    \n",
       "[Noun Extractor] complete eojeol counter -> lr graph\n",
-      "[Noun Extractor] has been trained. #eojeols=4434442, mem=0.954 Gb\n",
+      "[Noun Extractor] has been trained. #eojeols=4434442, mem=0.950 Gb\n",
       "[Noun Extractor] batch prediction was completed for 119705 words\n",
       "[Noun Extractor] checked compounds. discovered 70639 compounds\n",
       "[Noun Extractor] postprocessing detaching_features : 109312 -> 92205\n",
       "[Noun Extractor] postprocessing ignore_features : 92205 -> 91999\n",
       "[Noun Extractor] postprocessing ignore_NJ : 91999 -> 90643\n",
       "[Noun Extractor] 90643 nouns (70639 compounds) with min frequency=1\n",
-      "[Noun Extractor] flushing was done. mem=1.146 Gb                    \n",
+      "[Noun Extractor] flushing was done. mem=1.143 Gb                    \n",
       "[Noun Extractor] 76.63 % eojeols are covered\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.noun import LRNounExtractor_v2\n",
     "from soynlp.tokenizer import LTokenizer\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
