--- a/day07_sequential_labeling_ner/day7_a_logistic_window_classification_ner.ipynb
+++ b/day07_sequential_labeling_ner/day7_a_logistic_window_classification_ner.ipynb
@@ -31,8 +31,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n",
       "['명불허전']\n",
       "['왠지', '고사', '피의', '중간', '고사', '보다', '재미', '가', '없을듯', '해요', '만약', '보게', '된다면', '실망', '할듯']\n",
       "['티아라', '사랑', '해', 'ㅜ']\n"
@@ -40,8 +38,7 @@
     }
    ],
    "source": [
-    "import config\n",
-    "from navermovie_comments import get_movie_comments_path\n",
+    "from lovit_textmining_dataset.navermovie_comments import get_movie_comments_path\n",
     "\n",
     "class Comments:\n",
     "    def __init__(self, path):\n",
@@ -204,7 +201,7 @@
    ],
    "source": [
     "from pprint import pprint\n",
-    "from navermovie_comments import load_trained_embedding\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_trained_embedding\n",
     "\n",
     "\n",
     "word2vec = load_trained_embedding(tokenize='soynlp_unsup')\n",
