--- a/day07_sequential_labeling_ner/day7_a_pycrfsuite_spacing.ipynb
+++ b/day07_sequential_labeling_ner/day7_a_pycrfsuite_spacing.ipynb
@@ -19,19 +19,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pycrfsuite\n",
-    "import config"
+    "import pycrfsuite"
    ]
   },
   {
@@ -51,7 +41,7 @@
     }
    ],
    "source": [
-    "from navermovie_comments import load_movie_comments\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_movie_comments\n",
     "\n",
     "idxs, docs, rates = load_movie_comments(idxs='134963')\n",
     "len(docs)"
@@ -346,7 +336,7 @@
     {
      "data": {
       "text/plain": [
-       "<contextlib.closing at 0x7ff131244e80>"
+       "<contextlib.closing at 0x7f4a90296e10>"
       ]
      },
      "execution_count": 10,
