--- a/day07_sequential_labeling_ner/day7_0_pycrfsuite_CoNLL2002_NER.ipynb
+++ b/day07_sequential_labeling_ner/day7_0_pycrfsuite_CoNLL2002_NER.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.21.3\n"
+      "0.22.1\n"
      ]
     }
    ],
@@ -267,8 +267,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.22 s, sys: 12 ms, total: 1.23 s\n",
-      "Wall time: 1.23 s\n"
+      "CPU times: user 1.24 s, sys: 0 ns, total: 1.24 s\n",
+      "Wall time: 1.24 s\n"
      ]
     }
    ],
@@ -324,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.26 s, sys: 4 ms, total: 9.27 s\n",
-      "Wall time: 9.26 s\n"
+      "CPU times: user 9.36 s, sys: 0 ns, total: 9.36 s\n",
+      "Wall time: 9.35 s\n"
      ]
     }
    ],
@@ -416,8 +416,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 188 ms, sys: 0 ns, total: 188 ms\n",
-      "Wall time: 186 ms\n"
+      "CPU times: user 148 ms, sys: 0 ns, total: 148 ms\n",
+      "Wall time: 148 ms\n"
      ]
     }
    ],
@@ -479,10 +479,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/metrics/classification.py:1439: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels.\n",
-      "  'recall', 'true', average, warn_for)\n"
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
