--- a/day08_pytorch_basic/day_8_softmax_regression_for_document_classification.ipynb
+++ b/day08_pytorch_basic/day_8_softmax_regression_for_document_classification.ipynb
@@ -20,19 +20,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0.1.post2\n"
+      "1.4.0+cpu\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "import numpy as np\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn import metrics\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "print(torch.__version__)"
    ]
@@ -49,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load training set and test set\n",
@@ -75,10 +73,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.datasets.base module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.datasets. Anything that cannot be imported from sklearn.datasets is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "newsgroups_train = fetch_20newsgroups(\n",
     "    subset='train', remove=removals, categories=categories)\n",
@@ -97,9 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_train = newsgroups_train.data\n",
@@ -168,10 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class FeedForwardNN(nn.Module):\n",
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,10 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Model\n",
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,19 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## epoch = 0, training loss = 1.340s = 1.357\n",
-      "## epoch = 1, training loss = 0.878s = 0.934\n",
-      "## epoch = 2, training loss = 0.295s = 0.310\n",
-      "## epoch = 3, training loss = 0.121s = 0.121\n",
-      "## epoch = 4, training loss = 0.072s = 0.069\n",
-      "## epoch = 5, training loss = 0.053s = 0.050\n",
+      "## epoch = 0, training loss = 1.324s = 1.343\n",
+      "## epoch = 1, training loss = 0.835s = 0.889\n",
+      "## epoch = 2, training loss = 0.279s = 0.293\n",
+      "## epoch = 3, training loss = 0.116s = 0.116\n",
+      "## epoch = 4, training loss = 0.070s = 0.068\n",
+      "## epoch = 5, training loss = 0.052s = 0.049\n",
       "## epoch = 6, training loss = 0.043s = 0.040\n",
       "## epoch = 7, training loss = 0.038s = 0.035\n",
       "## epoch = 8, training loss = 0.035s = 0.032\n",
@@ -419,11 +418,9 @@
     "\n",
     "    # Loop over all epochs\n",
     "    for epoch in range(epochs):\n",
-    "\n",
     "        loss_sum = 0\n",
     "\n",
     "        for i in range(n_data // batch_size):\n",
-    "\n",
     "            # select mini-batch data\n",
     "            b = i * batch_size\n",
     "            e = min(n_data, (i+1) * batch_size)\n",
@@ -450,7 +447,6 @@
     "                    epoch, i+1, '%.3f' % loss_tmp), end='')\n",
     "\n",
     "        print('\\r## epoch = {}, training loss = {}'.format(epoch, '%.3f' % (loss_sum / (i+1)) ))\n",
-    "\n",
     "    return model\n",
     "\n",
     "model = train(x_train, y_train, model, loss_func, optimizer, batch_size)"
@@ -480,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +485,7 @@
        "(1584, 6535)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -549,16 +545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.7198, 9.5568, 8.6373])"
+       "tensor([1.3905, 7.6429, 7.4244])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +574,7 @@
        "tensor([3, 3, 2])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -615,14 +611,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy = 0.9059343434343434\n"
+      "accuracy = 0.9071969696969697\n"
      ]
     }
    ],
@@ -636,9 +632,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -659,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
